snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.md5
efed5894f4dbfde03e252876eb0b6186